# mne-helper

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  done.txt  notes.txt  pyproject.toml  pytest.ini  requirements.txt
data/export/: metadata.csv  metadata1.csv  metadata2.csv  metadata3.csv  metadata4.csv
scripts/: load_and_cwd.py  load_and_plot.py  load_and_preprocess.py  load_and_psd.py  load_find_montage.py  test_file_load.py
src/pyeeg/: __main__.py
src/pyeeg/io/: edf.py  eeglab.py  fetch_sample.py  getdir.py  loader.py  writers.py
src/pyeeg/preprocess/: find_montage.py  rename_channels.py  segmentation.py
src/pyeeg/signal/: spectrum.py  time_frequency.py
src/pyeeg/tests/io/: edf_test.py  eeglab_test.py
src/pyeeg/utils/: constants.py  logger.py
src/pyeeg/visualization/: plots.py
