[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeeg"
version = "0.1.0"
description = "EEG data processing pipeline"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["eeg", "signal-processing", "machine-learning", "neuroscience"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
